简化挖掘相关代码，经验值直接吸收，增加玩家保护开关选项。